--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=HieuLaTao_hieu
 sonar.organization=hieulatao
 sonar.java.binaries=build
+sonar.java.libraries=lib/**/*.jar
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=hieu
